メニュー修正

--- a/bin/bin.menu/Menu/Server/navi.html
+++ b/bin/bin.menu/Menu/Server/navi.html
@@ -15,7 +15,7 @@
 	<dl>
 		<a name="F1" href="menu_data.html"target="frm_menu"><dt>F1 データ連携</dt></a>
 		<dd></dd>
-		<a name="F2" href="menu_mnt.html"target="frm_menu"><dt>F2 メンテナンス</dt></a>
+		<a name="F2" href="javaScript:run_syain()"target="frm_menu"><dt>F2 メンテナンス</dt></a>
 		<dd></dd>
 		<a name="F3" href="menu_list.html"target="frm_menu"><dt>F3 帳票・照会</dt></a>
 		<dd></dd>
